Refactor user update endpoint (#23)
* Added ID path parameter to user update endpoint.
* Add ``UserUpdate`` request model.
* Updated ``openapi.yml`` and ``swagger.yml`` API specs.
