# openapi.yml
@@ -61,16 +61,22 @@ paths:
             application/json:
               schema:
                 type: string
-  /user:
     put:
       summary: Updates an existing User.
+      parameters:
+        - in: path
+          name: userId
+          schema:
+            type: string
+          required: true
+          description: ID value of the user to get
       requestBody:
         description: User update request object data
         required: true
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/User"
+              $ref: "#/components/schemas/UserUpdate"
       responses:
         '200':
           description: Returns the updated user object
@@ -90,6 +96,8 @@ paths:
             application/json:
               schema:
                 type: string
+
+  /user:
     post:
       summary: Creates a new User.
       requestBody:
@@ -176,4 +184,11 @@ components:
         updatedAt:
           type: string
           format: date-time
-
+    UserUpdate:
+      type: object
+      properties:
+        name:
+          type: string
+        email:
+          type: string
+          format: email
